--- a/packages/ui/src/assets/scss/_themes-vars.module.scss
+++ b/packages/ui/src/assets/scss/_themes-vars.module.scss
@@ -2,18 +2,36 @@
 $paper: #ffffff;
 
 // primary
-$primaryLight: #e3f2fd;
-$primaryMain: #2196f3;
-$primaryDark: #1e88e5;
-$primary200: #90caf9;
-$primary800: #1565c0;
+// $primaryLight: #e8e9eb;
+// $primaryMain: #1a1f36;
+// $primaryDark: #151a31;
+// $primary200: #454f5f;
+// $primary800: #1a1f3636;
 
 // secondary
-$secondaryLight: #ede7f6;
-$secondaryMain: #673ab7;
-$secondaryDark: #5e35b1;
-$secondary200: #b39ddb;
-$secondary800: #4527a0;
+$secondaryLight: #FFE8CC;
+$secondaryMain: #FF4800;
+$secondaryDark: #ff3c00;
+$secondary200: #FFCA99;
+$secondary800: #930B00;
+
+// primary
+// $primaryLight: #e3f2fd;
+// $primaryMain: #2196f3;
+// $primaryDark: #1e88e5;
+// $primary200: #90caf9;
+// $primary800: #1565c0;
+$primaryLight: #f7e1dd;
+$primaryMain: #c70039;
+$primaryDark: #a6002c;
+$primary200: #e64c3c;
+$primary800: #8f0026;
+// // secondary
+// $secondaryLight: #ede7f6;
+// $secondaryMain: #673ab7;
+// $secondaryDark: #5e35b1;
+// $secondary200: #b39ddb;
+// $secondary800: #4527a0;
 
 // success Colors
 $successLight: #cdf5d8;
